--- a/Study/.gitignore
+++ b/Study/.gitignore
@@ -14,3 +14,7 @@
 /Cat.class
 /Dog.class
 /VendingMachineTest.class
+/Can.class
+/VendingMachine.class
+/VendingMachineTest2.class
+/VendingMachineTest3.class
